Bug 985892 - Enable UICC Secure Element on Nexus 5. r=yoshi

--- a/nfc/libnfc-brcm.conf
+++ b/nfc/libnfc-brcm.conf
@@ -75,10 +75,10 @@ NFCC_ENABLE_TIMEOUT=1000
 # so that the stack will not wait any longer than necessary.
 #
 # Use for Host based CE
-NFA_MAX_EE_SUPPORTED=0
+#NFA_MAX_EE_SUPPORTED=0
 
 # Use for UICC support
-# NFA_MAX_EE_SUPPORTED=3
+NFA_MAX_EE_SUPPORTED=3
 
 ###############################################################################
 # Configure the single default SE to use.  The default is to use the first
@@ -88,10 +88,10 @@ NFA_MAX_EE_SUPPORTED=0
 # system in order to skip SE initialization.
 #
 # Use for Host based CE
-ACTIVE_SE=0x0
+#ACTIVE_SE=0x0
 
 # Use for UICC support
-#ACTIVE_SE=0xF3
+ACTIVE_SE=0xF3
 
 ###############################################################################
 # Configure the NFC Extras to open and use a static pipe.  If the value is
